libtracker-miner: Decorator causes crash on _update_array_finish() failures.

https://bugzilla.gnome.org/show_bug.cgi?id=728546